issue 201 rm utilities and search left right spacing

--- a/css/base-sass.css
+++ b/css/base-sass.css
@@ -378,7 +378,7 @@ a:link, a:visited, a:active, .mimic-link {
   color: #1d70b8;
   text-decoration: none; }
 
-a:focus, .mimic-link:focus {
+.mimic-link:focus {
   background-color: #fff;
   color: #000; }
 
@@ -503,7 +503,7 @@ ul.form-selectable li span input[type=checkbox] {
 
 /* Default form tags */
 input[type="submit"] {
-  background-color: #008484;
+  background-color: #26262a;
   color: #fff;
   padding: 0.3em .5em;
   border: 0;
@@ -524,7 +524,7 @@ input:focus {
 
 input[type="submit"]:focus, a.button:focus {
   color: #26262a;
-  background-color: #fff;
+  background-color: #ccc;
   border: 2px solid #26262a; }
 
 /* to allow longer single field search form with alternative border style */
@@ -1644,7 +1644,7 @@ a.button:hover {
 
 a:focus, a:active {
   outline: #1d70b8 solid 5px !important;
-  color: #000 !important; }
+  color: #000; }
 
 .close {
   background: url("../images/global/close-img.png");
@@ -4422,6 +4422,10 @@ hr {
 .no-left-right-padding {
   padding-left: 0;
   padding-right: 0; }
+
+.no-left-right-margin {
+  margin-left: 0 !important;
+  margin-right: 0 !important; }
 
 .section-heading {
   padding-top: 10px;
